--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
-SECRET_KEY=supersecretkey
-ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
-HF_TOKEN=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
-POSTGRES_USER=marcoramirez
-POSTGRES_PASSWORD=supersecurepassword
-POSTGRES_DB=back_cloud
-DATABASE_URL=postgresql://marcoramirez:supersecurepassword@db:5432/back_cloud
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=postgres
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
