correcciones base de datos

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ POSTGRES_PASSWORD=mypassword
 POSTGRES_DB=mydatabase
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-DATABASE_URL=postgresql://myuser:mypassword@localhost:5432/mydatabase
+DATABASE_URL="postgresql://usuario:password@35.192.55.181:5432/mydatabase"
