--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+SECRET_KEY=supersecretkey
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+HF_TOKEN=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
 POSTGRES_USER=myuser
 POSTGRES_PASSWORD=mypassword
 POSTGRES_DB=mydatabase
