better for sub/pub

--- a/.env
+++ b/.env
@@ -9,10 +9,11 @@ POSTGRES_PASSWORD=pokemon12345
 POSTGRES_DB=mydatabase
 POSTGRES_HOST=34.66.50.210
 POSTGRES_PORT=5432
-
-# Full connection string
 DATABASE_URL=postgresql://postgres:pokemon12345@34.66.50.210:5432/mydatabase
 
 # Google Cloud Storage Configuration
 GCS_BUCKET_NAME=bucket-cloud-file-llm
 GOOGLE_APPLICATION_CREDENTIALS=key.json
+
+# Google Cloud Pub/Sub Configuration
+GCP_PROJECT_ID=cloud-uniandes-451021
