--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.103.1
 uvicorn==0.23.2
 python-multipart==0.0.6
 sqlalchemy==2.0.17
+psycopg2-binary==2.9.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 pydantic==2.3.0
@@ -9,5 +10,7 @@ google-cloud-storage==2.10.0
 google-cloud-pubsub>=2.13.0
 python-dotenv==1.0.0
 sentence-transformers==2.2.2
+huggingface-hub==0.16.4
+transformers==4.30.2
 nltk==3.8.1
 requests==2.31.0
