--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 HF_TOKEN=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
 
 # PostgreSQL Database Configuration
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=pokemon12345
+POSTGRES_USER=myuser
+POSTGRES_PASSWORD=mypassword
 POSTGRES_DB=mydatabase
-POSTGRES_HOST=34.66.50.210
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-DATABASE_URL=postgresql://postgres:pokemon12345@34.66.50.210:5432/mydatabase
+DATABASE_URL="postgresql://myuser:mypassword@34.172.218.197:5432/mydatabase"
 
 # Google Cloud Storage Configuration
 GCS_BUCKET_NAME=bucket-cloud-file-llm
